fix(css): Set categories align-item to flex-start

--- a/assets/css/_partial/_archive/_terms.scss
+++ b/assets/css/_partial/_archive/_terms.scss
@@ -1,8 +1,7 @@
 .categories-card {
   margin: 0 auto;
-  margin-top: 3rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
@@ -13,7 +12,6 @@
     text-align: left;
     width: 45%;
     display: flex;
-    align-items: flex-start;
     margin-top: 2rem;
     min-height: 10rem;
     padding: 0 2%;
